objects/ActionOverrideTest__c.object
<CustomObject>
    <fields>
        <fullName>Override1__c</fullName>
        <label>Override1</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override2__c</fullName>
        <label>Override2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Override3__c</fullName>
        <label>Override3</label>
        <type>TextArea</type>
    </fields>
    <label>ActionOverrideTest</label>
    <nameField>
        <label>ActionOverrideTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ActionOverrideTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>